--- a/src/app/pages/auth/sign-up/sign-up.component.html
+++ b/src/app/pages/auth/sign-up/sign-up.component.html
@@ -33,9 +33,7 @@
         pInputText
         class="bg-gray-900 w-full mb-3"
         [ngClass]="{
-          'ng-invalid':
-            (loginForm.get('name')?.invalid && loginForm.get('name')?.dirty) ||
-            loginForm.get('name')?.touched
+          'ng-invalid': loginForm.get('name')?.invalid
         }"
       />
 
@@ -49,10 +47,7 @@
         pInputText
         class="bg-gray-900 w-full mb-3"
         [ngClass]="{
-          'ng-invalid':
-            (loginForm.get('email')?.invalid &&
-              loginForm.get('email')?.dirty) ||
-            loginForm.get('email')?.touched
+          'ng-invalid': loginForm.get('email')?.invalid
         }"
       />
 
@@ -66,10 +61,7 @@
         pInputText
         class="bg-gray-900 w-full mb-3"
         [ngClass]="{
-          'ng-invalid':
-            (loginForm.get('password')?.invalid &&
-              loginForm.get('password')?.dirty) ||
-            loginForm.get('password')?.touched
+          'ng-invalid': loginForm.get('password')?.invalid
         }"
       />
 
